--- a/Business/AndroidBusiness/src/main/res/layout/item_android_knowledge_tree.xml
+++ b/Business/AndroidBusiness/src/main/res/layout/item_android_knowledge_tree.xml
@@ -40,7 +40,7 @@
                 tools:ignore="RtlHardcoded" />
         </FrameLayout>
 
-        <com.ycbjie.android.view.weight.FlowLayout
+        <com.yc.android.view.weight.FlowLayout
             android:id="@+id/flowLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
