--- a/Business/NotifyBusiness/src/main/res/layout/view_notify_custom.xml
+++ b/Business/NotifyBusiness/src/main/res/layout/view_notify_custom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/custom_icon"
+        android:id="@+id/icon"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:layout_alignParentLeft="true"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/custom_icon"
+        android:layout_toRightOf="@id/icon"
         android:orientation="vertical" >
 
         <RelativeLayout
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/tv_custom_title"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -35,7 +35,7 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/tv_custom_time"
+                android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
