--- a/app/src/main/res/layout/foot_tool_view.xml
+++ b/app/src/main/res/layout/foot_tool_view.xml
@@ -69,7 +69,7 @@
             style="@style/WeightAttr"
             android:drawablePadding="8dp"
             android:drawableTop="@drawable/ic_home_four"
-            android:text="" />
+            android:text="kotlin原理" />
     </LinearLayout>
 
     <LinearLayout
