--- a/AppTool/src/main/res/layout/head_home_main.xml
+++ b/AppTool/src/main/res/layout/head_home_main.xml
@@ -38,7 +38,7 @@
             style="@style/WeightAttr"
             android:drawablePadding="8dp"
             android:drawableTop="@drawable/ic_home_four"
-            android:text="ANR监控" />
+            android:text="FPS" />
     </LinearLayout>
 
 
@@ -60,7 +60,7 @@
             style="@style/WeightAttr"
             android:drawablePadding="8dp"
             android:drawableTop="@drawable/ic_home_second"
-            android:text="国际化" />
+            android:text="卡顿" />
         <TextView
             android:id="@+id/tv_home_seven"
             style="@style/WeightAttr"
