--- a/Business/KotlinBusiness/src/main/res/layout/kotlin_activity_scope.xml
+++ b/Business/KotlinBusiness/src/main/res/layout/kotlin_activity_scope.xml
@@ -69,4 +69,13 @@
         android:background="@android:color/darker_gray"
         android:padding="10dp"/>
 
+    <TextView
+        android:id="@+id/tv_8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="8.串行执行多个任务"
+        android:background="@android:color/darker_gray"
+        android:padding="10dp"/>
+
 </LinearLayout>
