--- a/Business/AndroidBusiness/src/main/res/layout/activity_wan_android.xml
+++ b/Business/AndroidBusiness/src/main/res/layout/activity_wan_android.xml
@@ -8,7 +8,7 @@
 
     <include layout="@layout/base_android_bar"/>
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
