--- a/Business/WidgetBusiness/src/main/res/layout/activity_drawable_text.xml
+++ b/Business/WidgetBusiness/src/main/res/layout/activity_drawable_text.xml
@@ -13,6 +13,7 @@
         android:layout_height="100dp">
 
         <com.yc.apptextview.DrawableTextView
+            android:id="@+id/tv_drawable_1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -20,11 +21,13 @@
             android:text="@string/camera"
             android:textColor="@android:color/darker_gray"
             android:textSize="16sp"
+            android:background="@color/color_7f000000"
             app:leftDrawable="@mipmap/camera"
             app:leftDrawableHeight="20dp"
             app:leftDrawableWidth="20dp"/>
 
         <com.yc.apptextview.DrawableTextView
+            android:id="@+id/tv_drawable_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -37,6 +40,7 @@
             app:rightDrawableWidth="20dp"/>
 
         <com.yc.apptextview.DrawableTextView
+            android:id="@+id/tv_drawable_3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -53,8 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
-
         <com.yc.apptextview.DrawableTextView
+            android:id="@+id/tv_drawable_4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
