--- a/Business/DemoBusiness/src/main/res/layout/activity_mixture_text.xml
+++ b/Business/DemoBusiness/src/main/res/layout/activity_mixture_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.yc.widget.scrollView.NoNestedScrollview
+<com.yc.appscrollview.NoNestedScrollview
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -130,4 +130,4 @@
             android:text="你好"/>
 
     </LinearLayout>
-</com.yc.widget.scrollView.NoNestedScrollview>
+</com.yc.appscrollview.NoNestedScrollview>
