--- a/MonitorLib/MonitorPhone/src/main/res/layout/fragment_phone_all_info.xml
+++ b/MonitorLib/MonitorPhone/src/main/res/layout/fragment_phone_all_info.xml
@@ -100,6 +100,15 @@
                 android:background="#50a0e1a1"
                 style="@style/DetailContent"/>
 
+            <TextView
+                style="@style/DetailTitle"
+                android:text="App的so库"/>
+
+            <TextView
+                android:id="@+id/tv_content_so"
+                android:textColor="#8033b7"
+                android:background="#50a0e1a1"
+                style="@style/DetailContent"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
