--- a/AppMonitor/src/main/res/layout/activity_monitor_main.xml
+++ b/AppMonitor/src/main/res/layout/activity_monitor_main.xml
@@ -27,11 +27,12 @@
 
 
         <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_ping_monitor"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="@dimen/dp20"
-            android:text="2.获取手机App详细信息"
+            android:text="2.使用Ping检测网络接口"
             android:textSize="@dimen/textSize18"
             android:background="@color/priority_green"
             android:layout_marginTop="@dimen/dp20"
