--- a/AppMonitor/src/main/res/layout/activity_monitor_main.xml
+++ b/AppMonitor/src/main/res/layout/activity_monitor_main.xml
@@ -40,6 +40,21 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_phone_monitor"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_file_monitor"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="3.磁盘存储查看工具"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_ping_monitor"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
