--- a/AppWidget/src/main/res/layout/activity_widget_main.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_main.xml
@@ -5,6 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:padding="@dimen/dp10"
     android:orientation="vertical">
+
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_widget_round"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/dp20"
+        android:text="1.log日志调试案例"
+        android:textSize="@dimen/textSize18"
+        android:background="@color/priority_green"
+        app:rRadius="@dimen/dp20" />
 
 </LinearLayout>
