--- a/AppWidget/src/main/res/layout/activity_widget_main.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_main.xml
@@ -14,9 +14,22 @@
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="@dimen/dp20"
-        android:text="1.log日志调试案例"
+        android:text="1.圆角控件各种案例，别再用shape"
         android:textSize="@dimen/textSize18"
         android:background="@color/priority_green"
         app:rRadius="@dimen/dp20" />
+
+    <com.yc.roundcorner.view.RoundTextView
+        android:id="@+id/tv_widget_image"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/dp20"
+        android:text="2.各种图片控件"
+        android:textSize="@dimen/textSize18"
+        android:background="@color/priority_green"
+        app:rRadius="@dimen/dp20" />
+
 
 </LinearLayout>
