--- a/WidgetLib/AppChartView/src/main/res/values/attrs.xml
+++ b/WidgetLib/AppChartView/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="PieView">
+    <declare-styleable name="PieChartView">
         <attr name="radius" format="dimension"/>
         <attr name="border_length" format="dimension"/>
         <attr name="textSize" format="dimension"/>
