--- a/AppWidget/src/main/res/layout/activity_pre_view.xml
+++ b/AppWidget/src/main/res/layout/activity_pre_view.xml
@@ -24,6 +24,7 @@
         app:textSize="13sp" />
 
     <com.yc.appchartview.PieChartLayout
+        android:id="@+id/pie_chart_layout"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:orientation="horizontal"
