--- a/WidgetLib/AppChartView/src/main/res/layout/layout_pie_chart_view.xml
+++ b/WidgetLib/AppChartView/src/main/res/layout/layout_pie_chart_view.xml
@@ -11,13 +11,63 @@
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="40dp"
-        android:background="#DFDEDE"
-        android:padding="18dp"
-        app:borderLength="15dp"
+        app:borderLength="10dp"
         app:pieIntervalWidth="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:pieRadius="60dp"/>
+
+    <LinearLayout
+        android:id="@+id/ll_pie_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="@+id/pie_chart_view"
+        app:layout_constraintBottom_toBottomOf="@+id/pie_chart_view"
+        app:layout_constraintLeft_toLeftOf="@+id/pie_chart_view"
+        app:layout_constraintRight_toRightOf="@+id/pie_chart_view">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="70"
+            android:textSize="33sp"
+            android:textColor="#000000"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="坐姿侧弯"
+            android:textSize="10sp"
+            android:textColor="#000000"/>
+    </LinearLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_view"
+        android:visibility="gone"
+        android:layout_width="82dp"
+        android:layout_height="82dp"
+        android:background="@android:color/transparent"
+        app:cardCornerRadius="41dp"
+        app:cardElevation="7dp"
+        android:outlineAmbientShadowColor="#F8C5B8"
+        android:outlineSpotShadowColor="#F8C5B8"
+        app:layout_constraintTop_toTopOf="@+id/ll_pie_text"
+        app:layout_constraintBottom_toBottomOf="@+id/ll_pie_text"
+        app:layout_constraintLeft_toLeftOf="@+id/ll_pie_text"
+        app:layout_constraintRight_toRightOf="@+id/ll_pie_text"/>
+
+
+    <LinearLayout
+        android:id="@+id/ll_list_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toRightOf="@+id/pie_chart_view"
+        app:layout_constraintBottom_toBottomOf="@+id/pie_chart_view"
+        app:layout_constraintTop_toTopOf="@+id/pie_chart_view"/>
 
 
 
