--- a/WidgetLib/AppChartView/src/main/res/layout/item_desk_pie_text.xml
+++ b/WidgetLib/AppChartView/src/main/res/layout/item_desk_pie_text.xml
@@ -4,15 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingBottom="20dp">
+    android:paddingBottom="15dp">
 
     <TextView
         android:id="@+id/tv_desk_pie_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="坐姿侧弯"
-        android:textSize="@dimen/text_size_10sp"
-        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -21,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="70次"
-        android:textSize="@dimen/text_size_19sp"
-        android:textColor="@color/black"
+        android:textSize="19sp"
         app:layout_constraintTop_toBottomOf="@+id/tv_desk_pie_title"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -32,8 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
         android:text="/"
-        android:textSize="@dimen/text_size_12sp"
-        android:textColor="@color/black"
+        android:textSize="12sp"
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_desk_pie_percent"
         app:layout_constraintLeft_toRightOf="@+id/tv_desk_pie_percent"/>
@@ -44,8 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
         android:text="50次"
-        android:textSize="@dimen/text_size_19sp"
-        android:textColor="@color/black"
+        android:textSize="19sp"
         app:layout_constraintTop_toBottomOf="@+id/tv_desk_pie_title"
         app:layout_constraintLeft_toRightOf="@+id/tv_desk_pie_line"/>
 
