--- a/AppWidget/src/main/res/layout/activity_pre_view.xml
+++ b/AppWidget/src/main/res/layout/activity_pre_view.xml
@@ -23,7 +23,7 @@
         app:radius="60dp"
         app:textSize="13sp" />
 
-    <com.yc.appchartview.PieChartLayout
+    <com.yc.appchartview.PieEasyLayout
         android:id="@+id/pie_chart_layout"
         android:layout_width="match_parent"
         android:layout_height="180dp"
@@ -34,6 +34,14 @@
 
 
 
-    </com.yc.appchartview.PieChartLayout>
+    </com.yc.appchartview.PieEasyLayout>
+
+    <com.yc.appchartview.PieChartView
+        android:id="@+id/pie_chart_two"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pie_chart_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
