--- a/WidgetLib/AppShadowLib/src/main/res/values/attrs.xml
+++ b/WidgetLib/AppShadowLib/src/main/res/values/attrs.xml
@@ -1,50 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="ShadowView">
-        <attr name="android:foreground" />
-        <attr name="shadowMargin" format="dimension" />
-        <attr name="shadowMarginTop" format="dimension" />
-        <attr name="shadowMarginLeft" format="dimension" />
-        <attr name="shadowMarginRight" format="dimension" />
-        <attr name="shadowMarginBottom" format="dimension" />
-        <attr name="cornerRadius" format="dimension" />
-        <attr name="cornerRadiusTL" format="dimension" />
-        <attr name="cornerRadiusTR" format="dimension" />
-        <attr name="cornerRadiusBL" format="dimension" />
-        <attr name="cornerRadiusBR" format="dimension" />
-        <attr name="foregroundColor" format="color" />
-        <attr name="shadowColor" format="color" />
-        <attr name="shadowDx" format="float" />
-        <attr name="shadowDy" format="float" />
-        <attr name="shadowRadius" format="dimension" />
-        <attr name="backgroundColor" format="color" />
-    </declare-styleable>
-
-    <declare-styleable name="ShadowView_Layout">
-        <attr name="layout_gravity" format="integer"/>
-    </declare-styleable>
-
-
     <declare-styleable name="ShadowLayout">
         <!--阴影的圆角大小-->
-        <attr name="yc_cornerRadius" format="dimension" />
+        <attr name="shadow_cornerRadius" format="dimension" />
         <!--阴影的扩散范围(也可以理解为扩散程度)-->
-        <attr name="yc_shadowLimit" format="dimension" />
+        <attr name="shadow_shadowLimit" format="dimension" />
         <!--阴影颜色-->
-        <attr name="yc_shadowColor" format="color" />
+        <attr name="shadow_shadowColor" format="color" />
         <!--x轴的偏移量-->
-        <attr name="yc_dx" format="dimension" />
+        <attr name="shadow_dx" format="dimension" />
         <!--y轴的偏移量-->
-        <attr name="yc_dy" format="dimension" />
+        <attr name="shadow_dy" format="dimension" />
         <!--左边是否显示阴影-->
-        <attr name="yc_leftShow" format="boolean" />
+        <attr name="shadow_leftShow" format="boolean" />
         <!--右边是否显示阴影-->
-        <attr name="yc_rightShow" format="boolean" />
+        <attr name="shadow_rightShow" format="boolean" />
         <!--上边是否显示阴影-->
-        <attr name="yc_topShow" format="boolean" />
+        <attr name="shadow_topShow" format="boolean" />
         <!--下面是否显示阴影-->
-        <attr name="yc_bottomShow" format="boolean" />
+        <attr name="shadow_bottomShow" format="boolean" />
     </declare-styleable>
 
 </resources>
