--- a/AppMonitor/src/main/res/layout/activity_monitor_main.xml
+++ b/AppMonitor/src/main/res/layout/activity_monitor_main.xml
@@ -54,6 +54,33 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_ping_monitor"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_crash_monitor"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="4.崩溃收集日志到file文件"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_file_monitor"/>
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_crash_test"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="5.崩溃收集日志到file文件"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_crash_monitor"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
