--- a/AppServer/src/main/res/layout/activity_vibrator_main.xml
+++ b/AppServer/src/main/res/layout/activity_vibrator_main.xml
@@ -13,12 +13,12 @@
         android:padding="20dp">
 
         <com.yc.roundcorner.view.RoundTextView
-            android:id="@+id/tv_log_server1"
+            android:id="@+id/tv_vibrator_1"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="@dimen/dp20"
-            android:text="1.log日志调试案例"
+            android:text="1.开始震动"
             android:textSize="@dimen/textSize18"
             android:background="@color/priority_green"
             app:rRadius="@dimen/dp20"
@@ -27,33 +27,32 @@
 
 
         <com.yc.roundcorner.view.RoundTextView
-            android:id="@+id/tv_log_server"
+            android:id="@+id/tv_vibrator_2"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="@dimen/dp20"
-            android:text="2.log日志调试案例"
+            android:text="2.取消震动"
             android:textSize="@dimen/textSize18"
             android:background="@color/priority_green"
             android:layout_marginTop="@dimen/dp20"
             app:rRadius="@dimen/dp20"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_log_server1"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_vibrator_1"/>
 
         <com.yc.roundcorner.view.RoundTextView
-            android:id="@+id/tv_vibrator_test"
+            android:id="@+id/tv_vibrator_3"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="@dimen/dp20"
-            android:text="3.手机震动的设置"
+            android:text="3.震动2秒钟"
             android:textSize="@dimen/textSize18"
             android:background="@color/priority_green"
             android:layout_marginTop="@dimen/dp20"
             app:rRadius="@dimen/dp20"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_log_server"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_vibrator_2"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
