--- a/AppServer/src/main/res/layout/activity_vibrator_main.xml
+++ b/AppServer/src/main/res/layout/activity_vibrator_main.xml
@@ -54,6 +54,49 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_vibrator_2"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_media_1"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="4.播放raw资源文件"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_vibrator_3"/>
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_media_2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="5.播放asset资源文件"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_media_1"/>
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_media_3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="6.取消播放"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_media_2"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
